@@ -1,6 +1,6 @@
 optansout <- function(ansdf, filename) {
     ##### OPEN ISSUES: (any date order)
-    
+    # 120709 Not printing parameters == but does when source'd!    
     ##### IMPLEMENTED: (reverse date order)
     
     # A funtion to display and print to file (if present) the
@@ -12,25 +12,22 @@ optansout <- function(ansdf, filename) {
     #   check paths
     tpar <- ansdf$par
     tdf <- ansdf
-#    ltvec <- length(tpar[[1]]) #?? needed??
+#    ltvec <- length(tpar[[1]]) 
     for (i in 1:length(tpar)) {
         tvec <- tpar[[i]]
         ltvec <- length(tvec)
         if (ltvec > 5) {
             tvec <- tvec[1:5]
-        }
+            cat("truncating parameters\n")
+        } else cat("no shortening of parameters\n")
         tpar[[i]] <- tvec
     }
     tdf$par <- tpar
-    pardf <- tdf[1]
     if (ltvec > 5) {
-        names(pardf)[1] <- "first.5.par"
+        names(tdf)[2] <- "first.5.par"
+    } else {
+        names(tdf)[2] <- "par"
     }
-    else {
-        names(pardf)[1] <- "par"
-    }
-    print(pardf)
-    tdf$par <- NULL
     print(tdf)
     if (!is.null(filename)) {
         sink()
